Dist added and details fixed

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "vite --open",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview --open"
     },
     "dependencies": {
         "leo-css-reset": "^1.0.0",
