--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "vite --open",
         "build": "vite build",
-        "preview": "vite preview --open"
+        "preview": "vite preview --open",
+        "deploy": "git subtree push --prefix dist origin gh-pages",
     },
     "dependencies": {
         "leo-css-reset": "^1.0.0",
