--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "deploy": "git subtree push --prefix dist origin gh-pages"
     },
     "dependencies": {
-        "leo-css-reset": "^1.0.0",
+        "leo-reset.css": "^1.0.4",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
