--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
         "leo-reset.css": "^1.0.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "rfs": "^10.0.0"
+        "styled-components": "^5.3.9"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^3.1.0",
-        "sass": "^1.60.0",
         "vite": "^4.2.1",
         "vite-plugin-svgr": "^2.4.0"
     }
